# SOEM

./: CMakeLists.txt  EthercatTest.cpp  Motor.h  ODVariable.h  README.md  Robot.h
